--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "com.unity.cinemachine": "2.9.7",
     "com.unity.collab-proxy": "2.0.4",
+    "com.unity.device-simulator.devices": "1.0.0",
     "com.unity.feature.development": "1.0.1",
     "com.unity.inputsystem": "1.6.3",
+    "com.unity.recorder": "4.0.3",
     "com.unity.render-pipelines.universal": "14.0.8",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.4",
